<resources>
    <string name="app_name">FoSer</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="info_state">Service state:</string>
    <string name="info_service_running">Service IS running…</string>
    <string name="info_service_not_running">Service is NOT running</string>
    <string name="info_states">Service action:</string>
    <string name="button_start">Start</string>
    <string name="button_restart">Restart</string>
    <string name="button_stop">Stop</string>

    <string name="ser_title">FoSer!</string>
    <string name="ser_initial_info">Service is just running…</string>

    <string name="label_settings">Settings</string>

    <string name="titleSettings">Settings</string>
    <string name="titleExit">Exit</string>


    <!-- Preference Titles -->
    <string name="messages_header">Notification information</string>
    <string name="sync_header">Synchronization</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Message to show</string>
    <string name="reply_title">Display when</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Work periodically</string>
    <string name="attachment_title">Double speed</string>
    <string name="attachment_summary_on">Double working frequency </string>
    <string name="attachment_summary_off">Standard operating frequency</string>
</resources>